<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen_gradient"
    android:fillViewport="true"
    android:overScrollMode="never">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/space_xl"
        android:paddingTop="@dimen/space_2xl"
        android:paddingEnd="@dimen/space_xl"
        android:paddingBottom="@dimen/space_2xl">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_l"
            app:cardBackgroundColor="@color/colorSurface"
            app:cardCornerRadius="@dimen/corner_large"
            app:cardElevation="6dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/space_xl">

                <TextView
                    style="@style/TextAppearance.App.ScreenTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name" />

                <TextView
                    style="@style/TextAppearance.App.Body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_s"
                    android:text="@string/main_subtitle" />

                <TextView
                    android:id="@+id/tv_status"
                    style="@style/Widget.App.InfoChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_l"
                    android:text="@string/overlay_status_off" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_l"
            app:cardBackgroundColor="@color/colorSurface"
            app:cardCornerRadius="@dimen/corner_large"
            app:cardElevation="6dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/space_xl">

                <TextView
                    style="@style/TextAppearance.App.CardTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/overlay_controls_title" />

                <TextView
                    style="@style/TextAppearance.App.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_xs"
                    android:text="@string/overlay_controls_description" />

                <Button
                    android:id="@+id/btn_request_overlay"
                    style="@style/Widget.App.SecondaryButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_l"
                    android:text="@string/request_overlay_permission" />

                <Button
                    android:id="@+id/btn_start_overlay"
                    style="@style/Widget.App.PrimaryButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_m"
                    android:text="@string/start_overlay" />

                <Button
                    android:id="@+id/btn_stop_overlay"
                    style="@style/Widget.App.DangerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_m"
                    android:text="@string/stop_overlay" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_l"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextAppearance.App.Body"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/auto_start_on_boot_title"
                            android:textColor="@color/textPrimary"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_boot_restore_summary"
                            style="@style/TextAppearance.App.Caption"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/space_xs"
                            android:text="@string/auto_start_on_boot_summary_disabled" />
                    </LinearLayout>

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/switch_boot_restore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/space_l" />
                </LinearLayout>

                <TextView
                    style="@style/TextAppearance.App.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_s"
                    android:text="@string/auto_start_on_boot_hint" />

                <TextView
                    android:id="@+id/tv_boot_restore_failure"
                    style="@style/TextAppearance.App.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_s"
                    android:textColor="@color/danger"
                    android:visibility="gone" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_l"
            app:cardBackgroundColor="@color/colorSurface"
            app:cardCornerRadius="@dimen/corner_large"
            app:cardElevation="6dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/space_xl">

                <TextView
                    style="@style/TextAppearance.App.CardTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/workspace_title" />

                <TextView
                    style="@style/TextAppearance.App.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_xs"
                    android:text="@string/workspace_description" />

                <Button
                    android:id="@+id/btn_start_record"
                    style="@style/Widget.App.PrimaryButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_l"
                    android:text="@string/start_recording" />

                <Button
                    android:id="@+id/btn_manage_points"
                    style="@style/Widget.App.SecondaryButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_m"
                    android:text="@string/manage_block_points" />

                <Button
                    android:id="@+id/btn_test_block"
                    style="@style/Widget.App.SecondaryButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_m"
                    android:text="@string/test_blocking" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorSurface"
            app:cardCornerRadius="@dimen/corner_large"
            app:cardElevation="6dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/space_xl">

                <TextView
                    style="@style/TextAppearance.App.CardTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/diagnostics_title" />

                <TextView
                    style="@style/TextAppearance.App.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_xs"
                    android:text="@string/diagnostics_description" />

                <Button
                    android:id="@+id/btn_toggle_debug"
                    style="@style/Widget.App.SecondaryButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_l"
                    android:text="@string/debug_overlay_off" />

                <Button
                    android:id="@+id/btn_export_logs"
                    style="@style/Widget.App.SecondaryButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_m"
                    android:text="@string/export_logs" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
