<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/record_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen_gradient">

    <com.payton.touchblocker.TouchRecordView
        android:id="@+id/record_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="false"
        android:background="@drawable/bg_overlay_panel"
        android:layout_gravity="top"
        android:layout_marginStart="@dimen/space_l"
        android:layout_marginTop="@dimen/space_2xl"
        android:layout_marginEnd="@dimen/space_l"
        android:orientation="vertical"
        android:padding="@dimen/space_m">

        <TextView
            style="@style/TextAppearance.App.OverlayEyebrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recording_mode" />

        <TextView
            android:id="@+id/tv_record_hint"
            style="@style/TextAppearance.App.OverlayTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_s"
            android:text="@string/recording_off_start" />

        <TextView
            style="@style/TextAppearance.App.OverlayCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xs"
            android:text="@string/hint_volume_keys" />
    </LinearLayout>

    <View
        android:id="@+id/record_touch_layer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent" />

</FrameLayout>
