<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen_gradient"
    android:fillViewport="true"
    android:overScrollMode="never">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/space_xl"
        android:paddingTop="@dimen/space_2xl"
        android:paddingEnd="@dimen/space_xl"
        android:paddingBottom="@dimen/space_2xl">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_l"
            app:cardBackgroundColor="@color/colorSurface"
            app:cardCornerRadius="@dimen/corner_large"
            app:cardElevation="6dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/space_xl">

                <TextView
                    style="@style/TextAppearance.App.ScreenTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manage_points_title" />

                <TextView
                    style="@style/TextAppearance.App.Body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_s"
                    android:text="@string/manage_points_description" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_l"
            app:cardBackgroundColor="@color/colorSurface"
            app:cardCornerRadius="@dimen/corner_large"
            app:cardElevation="6dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/space_xl">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextAppearance.App.CardTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/global_block_size" />

                        <TextView
                            style="@style/TextAppearance.App.Caption"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/space_xs"
                            android:text="@string/global_block_size_description" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_global_size"
                        style="@style/Widget.App.InfoChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/space_m"
                        android:text="@string/global_size_default" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_l"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <SeekBar
                        android:id="@+id/sb_global_size"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:max="600"
                        android:progress="120" />

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/space_l"
                        android:background="@drawable/bg_info_chip"
                        android:padding="@dimen/space_m">

                        <com.payton.touchblocker.PreviewCircleView
                            android:id="@+id/preview_global"
                            android:layout_width="72dp"
                            android:layout_height="72dp" />
                    </FrameLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <TextView
            style="@style/TextAppearance.App.SectionEyebrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saved_points" />

        <TextView
            style="@style/TextAppearance.App.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xs"
            android:layout_marginBottom="@dimen/space_m"
            android:text="@string/saved_points_description" />

        <LinearLayout
            android:id="@+id/list_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </LinearLayout>

</ScrollView>
